# tournament-tracker-backend

./: .dockerignore  .env  .gitignore  .qovery.yml  Cargo.toml  Dockerfile  README.md  config.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  prod.yaml
migrations/: 20201101121702_tournament-tracker.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  endpoints.rs  lib.rs  main.rs  match_operations.rs
src/stores/: court_store.rs  match_store.rs  mod.rs  player_registration_store.rs  player_store.rs  tournament_store.rs  user_store.rs
tests/: authentication_tests.rs  common.rs  endpoint_tests.rs  match_tests.rs  tournament_tests.rs
