[package]
name = "tournament-tracker-backend"
version = "0.1.0"
authors = ["Nehliin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
env_logger = "0.8.1"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"] }
log = "0.4"
serde = "1.0"
config = "0.10"
chrono = {version = "0.4", features = ["serde"]}
async-trait = "0.1"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
actix-rt = "1.1"
uuid = {version = "0.8", features = ["v4"]}
reqwest = {version = "0.10", features = ["json"]}
# TODO: replace with actix_rt spawn?
tokio = {version = "0.3", features = ["full"]}