[package]
name = "tournament-tracker-backend"
version = "0.1.0"
authors = ["Nehliin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "3"
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-actix-native-tls", "macros", "postgres", "offline", "chrono", "migrate"] }
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-appender = "0.1"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1"
tracing-actix-web = "0.2"
tracing-log = "0.1"
serde = "1.0"
config = "0.10"
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0"
thiserror = "1.0"
serde-aux = "1.1"
futures = "0.3"
async-trait = "0.1"
regex = "1"
once_cell = "1"

[dev-dependencies]
actix-rt = "1.1"
lazy_static = "1.4"
uuid = {version = "0.8", features = ["v4"]}
reqwest = {version = "0.10", features = ["json"]}
# TODO: replace with actix_rt spawn?
tokio = {version = "0.3", features = ["full"]}